--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,23 @@ jobs:
       # LINUX
       - name: Install dependencies (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
-        run: sudo apt-get update && sudo apt-get -y install libssl-dev libboost-dev libboost-system-dev libboost-filesystem-dev libpulse-dev libxkbcommon-x11-0 libgstreamer-plugins-base1.0-0 build-essential libgl1-mesa-dev
+        run: |
+            sudo apt-get update
+            sudo apt-get -y install \
+                libssl-dev \
+                libboost-dev \
+                libboost-system-dev \
+                libboost-filesystem-dev \
+                libpulse-dev \
+                libxkbcommon-x11-0 \
+                libgstreamer-plugins-base1.0-0 \
+                build-essential \
+                libgl1-mesa-dev \
+                libxcb-icccm4 \
+                libxcb-image0 \
+                libxcb-keysyms1 \
+                libxcb-render-util0 \
+                libxcb-xinerama0
 
       - name: Build (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
