--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,8 @@ jobs:
                 libxcb-image0 \
                 libxcb-keysyms1 \
                 libxcb-render-util0 \
-                libxcb-xinerama0
+                libxcb-xinerama0 \
+                libgtest-dev
 
       - name: Create build directory (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
