--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -216,11 +216,6 @@ jobs:
 
       # TODO: Extract dmg and appimage
 
-      - name: TREE
-        run: |
-            sudo apt update && sudo apt install tree
-            tree .
-
       # - name: Read upload URL into output
       #   id: upload_url
       #   run: |
@@ -232,7 +227,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows/chatterino-windows-x86-64-default.zip
+          asset_path: ./windows/chatterino-windows-x86-64.zip
           asset_name: chatterino-windows-x86-64.zip
           asset_content_type: application/zip
 
@@ -242,7 +237,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux/Chatterino-x86_64-default.AppImage
+          asset_path: ./linux/Chatterino-x86_64.AppImage
           asset_name: Chatterino-x86_64.AppImage
           asset_content_type: application/x-executable
 
@@ -252,6 +247,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./macos/chatterino-osx-default.dmg
+          asset_path: ./macos/chatterino-osx.dmg
           asset_name: chatterino-osx.dmg
           asset_content_type: application/x-bzip2
