--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         uses: jurplel/install-qt-action@v2
         if: ${{ matrix.qt-version == 'default' }}
         with:
-          # mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
+          mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
           extra: --external 7z
 
@@ -51,7 +51,7 @@ jobs:
         uses: jurplel/install-qt-action@v2
         if: ${{ matrix.qt-version != 'default' }}
         with:
-          # mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
+          mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
           extra: --external 7z
           version: ${{ matrix.qt-version }}
