--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,6 +80,6 @@ jobs:
       - name: Test (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
-            ctest
+            ./chatterino-test
         working-directory: build-test
         shell: bash
