do minimal platform on test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,6 +84,6 @@ jobs:
         run: |
             ls -la "$Qt5_DIR"
             ls -la "$QT_PLUGIN_PATH"
-            ./chatterino-test
+            ./chatterino-test --platform minimal
         working-directory: build-test
         shell: bash
