:construction_worker: Clean conan pkgs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,3 +92,6 @@ jobs:
             ./chatterino-test --platform minimal
         working-directory: build-test
         shell: bash
+
+      - name: Clean conan pkgs
+        run: cmake -P cmake/pmm.cmake /Conan /Clean
