--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -72,8 +72,8 @@ jobs:
       - name: Build (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
         run: |
-            cmake -DBUILD_TESTS=On ..
-            cmake --build .
+            cmake -DBUILD_TESTS=On -DCMAKE_BUILD_TYPE=Release ..
+            cmake --build . --config Release
         working-directory: build-test
         shell: bash
 
