Attempt to fix build on CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,8 @@ jobs:
                 libxcb-image0 \
                 libxcb-keysyms1 \
                 libxcb-render-util0 \
-                libxcb-xinerama0
+                libxcb-xinerama0 \
+                libxcb-randr0
 
       - name: Build (Ubuntu)
         if: startsWith(matrix.os, 'ubuntu')
